# wifi-arsenal

./: .gitmodules  README.md  Wireless IDS Tool.py  fakeaps.c  handshakeharvest-K1-K2-K2016-4-0.sh  spectrum.py
airpwn/: .gitrepo  802_11.h  INSTALL  Makefile  Makefile.am  Makefile.in  README  airpwn.1  airpwn.c  conf.c  conf.h  config.h  config.h.in  config.status  configure  configure.ac  freq2channel.txt  keygen.c  mac80211_prep.sh  madwifing_prep.sh  madwifiold_prep.sh  wep.c  wep.h
airpwn/conf/: README  airpwn_cssbg  airpwned_img  ftp_resp  googlemaps_img  greet_html  js_html  puppy_jpg  pyexample  site_hijack
airpwn/content/: ftp_resp  greet_html  js_html  site_hijack
airpwn/pyscripts/: pyexample.py
banjax/: .gitignore  .gitrepo  AUTHORS  Makefile.am  README  bootstrap  configure.ac
banjax/lib/: Makefile.am  banjax.pc.in
banjax/lib/dot11/: control_frame.cpp  control_frame.hpp  data_frame.cpp  data_frame.hpp  frame.cpp  frame.hpp  frame_control.cpp  frame_control.hpp  frame_subtype.hpp  frame_type.hpp  ip_hdr.cpp  ip_hdr.hpp  llc_hdr.cpp  llc_hdr.hpp  mgmt_frame.cpp  mgmt_frame.hpp  sequence_control.cpp  sequence_control.hpp  udp_hdr.cpp  udp_hdr.hpp
banjax/lib/metrics/: abstract_metric.cpp  abstract_metric.hpp  airtime_metric_kernel.cpp  airtime_metric_kernel.hpp  airtime_metric_linux.cpp  airtime_metric_linux.hpp  airtime_metric_measured.cpp  airtime_metric_measured.hpp  airtime_metric_ns3.cpp  airtime_metric_ns3.hpp  elc_metric.cpp  elc_metric.hpp  elc_mrr_metric.cpp  elc_mrr_metric.hpp  etx_metric.cpp  etx_metric.hpp  fdr_metric.cpp  fdr_metric.hpp  goodput_metric.cpp  goodput_metric.hpp  iperf_metric.cpp  iperf_metric.hpp  iperf_metric_wrapper.cpp  iperf_metric_wrapper.hpp  legacy_elc_metric.cpp  legacy_elc_metric.hpp  metric.cpp  metric.hpp  metric_damper.cpp  metric_damper.hpp  metric_decimator.cpp  metric_decimator.hpp  metric_demux.cpp  metric_demux.hpp  metric_group.cpp  metric_group.hpp  pdr_metric.cpp  pdr_metric.hpp  pktsz_metric.cpp  pktsz_metric.hpp  (+12 more)
banjax/lib/net/: abstract_buffer.cpp  abstract_buffer.hpp  abstract_wnic.cpp  abstract_wnic.hpp  buffer.cpp  buffer.hpp  buffer_body.cpp  buffer_body.hpp  buffer_fragment.cpp  buffer_fragment.hpp  buffer_header.cpp  buffer_header.hpp  buffer_info.cpp  buffer_info.hpp  channel.cpp  channel.hpp  datalink.cpp  datalink.hpp  datalink_factory.cpp  dsss_encoding.cpp  dsss_encoding.hpp  dsss_ofdm_encoding.cpp  dsss_ofdm_encoding.hpp  dummy_wnic.cpp  dummy_wnic.hpp  encoding.cpp  encoding.hpp  encoding_factory.cpp  eui_48.cpp  eui_48.hpp  eui_48_range.cpp  eui_48_range.hpp  fhss_encoding.cpp  fhss_encoding.hpp  linux_wnic.cpp  linux_wnic.hpp  ofdm_encoding.cpp  ofdm_encoding.hpp  offline_wnic.cpp  offline_wnic.hpp  (+32 more)
banjax/lib/util/: byteswab.hpp  dump.cpp  dump.hpp  error_log.cpp  error_log.hpp  exceptions.hpp  syscall_error.cpp  syscall_error.hpp
banjax/m4/: ax_boost_signals.m4  ax_boost_thread.m4  ax_boost_unit_test_framework.m4
banjax/model/: banjax.zargo
banjax/src/: Makefile.am
banjax/src/announce/: announce.c
banjax/src/beacons/: Makefile.am  beacon-time.sh  beacons.cpp  compute-dead.sh  zeroise.scm
banjax/src/changes/: Makefile.am  changes.cpp
banjax/src/contention/: Makefile.am  difftimes.scm  main.cpp  plot-fixed.sh  plot-txc.sh  (+4 more)
dot11decrypt/: .gitrepo  Makefile.in  README.md  configure  configure.ac  main.cpp
libmoep-1.1/: Doxyfile.in  Makefile.am  README  configure.ac  libmoep80211.pc.in
libmoep-1.1/examples/: moepeval.1  moepeval.c  ptmbeacon.1  ptmbeacon.c  ptmsimple.1  ptmsimple.c
libmoep-1.1/src/: dev.c  dev.h  frame.c  interfaces.c  interfaces.h  list.h  moep_hdr_ext.c  moep_hdr_ext.h  system.c  util.h
libnl/: .gitignore  .gitrepo  .indent.pro  .travis.yml  Makefile.am  autogen.sh  configure.ac  libnl-3.sym  libnl-cli-3.sym  libnl-genl-3.sym  libnl-idiag-3.0.pc.in  libnl-idiag-3.sym  libnl-nf-3.sym  libnl-route-3.sym  libnl-xfrm-3.0.pc.in  libnl-xfrm-3.sym
libnl/.travis/: run.sh
libnl/doc/: .gitignore  AUTHORS  Doxyfile.in  Makefile.am  README  configure.ac  core.txt  doxygen-link.py  gen-tags.sh  route.txt
libnl/etc/: pktloc
libnl/include/: Makefile.am
libnl/lib/: .gitignore  Makefile.am  addr.c  attr.c  cache.c  cache_mngr.c  cache_mngt.c  data.c  handlers.c  msg.c  nl.c  object.c  socket.c  utils.c
libnl/m4/: ax_python.m4
libnl/python/: .gitignore  setup.py.in
libnl/src/: .gitignore  Makefile.am  idiag-socket-details.c  nf-log.c  nf-queue.c  nl-cls-add.c  nl-cls-delete.c  nl-cls-list.c  nl-monitor.c  nl-neightbl-list.c  nl-route-get.c  nl-rule-list.c
libnl/tests/: .gitignore  Makefile.am  test-create-ifb.c  test-create-macvlan.c  test-u32-filter-with-actions.c
lorcon/: .gitrepo  BUGS  Makefile.in  README  THANKS  TODO  aclocal.m4  airpinject.c  airpinject.h  capture_example.c  config.h.in  config_win32.h  configure  configure.in  cygbuild.sh  drv_airjack.c  drv_airjack.h  drv_brcm43xx.c  drv_brcm43xx.h  drv_hostap.c  drv_hostap.h  drv_mac80211.c  drv_mac80211.h  drv_madwifing.c  drv_madwifing.h  drv_madwifiold.c  drv_madwifiold.h  drv_p54.c  drv_p54.h  drv_rt2500.c  drv_rt2500.h  drv_rt2570.c  drv_rt2570.h  drv_rt61.c  drv_rt61.h  drv_rt73.c  drv_rt73.h  drv_rtl.c  drv_rtl.h  drv_tuntap.c  (+33 more)
lorcon/examples/: README  beacon_flood_lcpa.c  beacon_flood_raw.c  beacon_flood_raw.py
lorcon/patch/: README.madwifing  README.wlanng  README.wlanng-II  README.zd1211rw  hostap-driver-0.3.10.patch  hostap-driver-0.3.7.patch.0.1  linux-wlan-ng-0.2.1-pre26.patch.0.1  linux-wlan-ng-0.2.1-pre26.patch.0.1-II  madwifing-svn-r1518.patch  madwifing-svn-r1527.patch  prism54-kernel-2.6.10.patch.0.1  rt2500-cvs-20050721.patch  rt2500-cvs-20050724.patch
lorcon/pylorcon2/: MANIFEST.in  README.TRUNKCOPY  test.py
lorcon/ruby-lorcon/: extconf.rb
reaver-wps/src/: 80211.c  80211.h  argsparser.c  builder.c  configure  configure.ac  cracker.c  cracker.h  crc.c  defs.h  exchange.c  globule.c  globule.h  iface.c  iface.h  init.c  init.h  keys.c  keys.h  misc.c  pins.c  pins.h  reaver.db  send.c  session.c  sigalrm.c  sigint.c  sql.c  test  wps.h  wpscrack.c  wpsmon.c  wpsmon.h
(+4077 files in other folders)
