# Copyright 2011 Stephen Glass.

lib_LTLIBRARIES = libbanjax.la

libbanjax_la_SOURCES= \
	dot11/control_frame.cpp \
	dot11/data_frame.cpp \
	dot11/frame_control.cpp \
	dot11/frame.cpp \
	dot11/ip_hdr.cpp \
	dot11/llc_hdr.cpp \
	dot11/mgmt_frame.cpp \
	dot11/sequence_control.cpp \
	dot11/udp_hdr.cpp \
	metrics/abstract_metric.cpp \
	metrics/airtime_metric_kernel.cpp \
	metrics/airtime_metric_linux.cpp \
	metrics/airtime_metric_measured.cpp \
	metrics/airtime_metric_ns3.cpp \
	metrics/elc_metric.cpp \
	metrics/elc_mrr_metric.cpp \
	metrics/etx_metric.cpp \
	metrics/fdr_metric.cpp \
	metrics/goodput_metric.cpp \
	metrics/iperf_metric.cpp \
	metrics/iperf_metric_wrapper.cpp \
	metrics/legacy_elc_metric.cpp \
	metrics/metric.cpp \
	metrics/metric_damper.cpp \
	metrics/metric_decimator.cpp \
	metrics/metric_demux.cpp \
	metrics/metric_group.cpp \
	metrics/pdr_metric.cpp \
	metrics/pktsz_metric.cpp \
	metrics/pkttime_metric.cpp \
	metrics/saturation_metric.cpp \
	metrics/simple_elc_metric.cpp \
	metrics/tmt_metric.cpp \
	metrics/txc_metric.cpp \
	metrics/utilization_metric.cpp \
	net/abstract_buffer.cpp \
	net/abstract_wnic.cpp \
	net/buffer_body.cpp \
	net/buffer.cpp \
	net/buffer_fragment.cpp \
	net/buffer_header.cpp \
	net/buffer_info.cpp \
	net/channel.cpp \
	net/datalink.cpp \
	net/datalink_factory.cpp \
	net/dsss_encoding.cpp \
	net/dsss_ofdm_encoding.cpp \
	net/dummy_wnic.cpp \
	net/encoding.cpp \
	net/encoding_factory.cpp \
	net/eui_48.cpp \
	net/eui_48_range.cpp \
	net/fhss_encoding.cpp \
	net/linux_wnic.cpp \
	net/ofdm_encoding.cpp \
	net/offline_wnic.cpp \
	net/pcap_wnic.cpp \
	net/plain_datalink.cpp \
	net/prism2_datalink.cpp \
	net/radiotap_datalink.cpp \
	net/txtime.cpp \
	net/wnic.cpp \
	net/wnic_encoding_fix.cpp \
	net/wnic_factory.cpp \
	net/wnic_frame_aggregator.cpp \
	net/wnic_read_logger.cpp \
	net/wnic_require_timestamps.cpp \
	net/wnic_timestamp_fix.cpp \
	net/wnic_timestamp_swizzle.cpp \
	net/wnic_wallclock_fix.cpp \
	net/wnic_wrapper.cpp \
	net/wnic_write_logger.cpp \
	util/dump.cpp \
	util/error_log.cpp \
	util/syscall_error.cpp

libbanjax_ladir = $(includedir)/banjax

nobase_libbanjax_la_HEADERS= \
	dot11/control_frame.hpp \
	dot11/data_frame.hpp \
	dot11/frame_control.hpp \
	dot11/frame.hpp \
	dot11/frame_subtype.hpp \
	dot11/frame_type.hpp \
	dot11/ip_hdr.hpp \
	dot11/llc_hdr.hpp \
	dot11/mgmt_frame.hpp \
	dot11/sequence_control.hpp \
	dot11/udp_hdr.hpp \
	metrics/abstract_metric.hpp \
	metrics/airtime_metric_kernel.hpp \
	metrics/airtime_metric_linux.hpp \
	metrics/airtime_metric_measured.hpp \
	metrics/airtime_metric_ns3.hpp \
	metrics/elc_metric.hpp \
	metrics/elc_mrr_metric.hpp \
	metrics/etx_metric.hpp \
	metrics/fdr_metric.hpp \
	metrics/goodput_metric.hpp \
	metrics/iperf_metric.hpp \
	metrics/iperf_metric_wrapper.hpp \
	metrics/legacy_elc_metric.hpp \
	metrics/metric.hpp \
	metrics/metric_damper.hpp \
	metrics/metric_decimator.hpp \
	metrics/metric_demux.hpp \
	metrics/metric_group.hpp \
	metrics/pdr_metric.hpp \
	metrics/pktsz_metric.hpp \
	metrics/pkttime_metric.hpp \
	metrics/saturation_metric.hpp \
	metrics/simple_elc_metric.hpp \
	metrics/tmt_metric.hpp \
	metrics/txc_metric.hpp \
	metrics/utilization_metric.hpp \
	net/abstract_buffer.hpp \
	net/abstract_wnic.hpp \
	net/buffer_body.hpp \
	net/buffer_fragment.hpp \
	net/buffer_header.hpp \
	net/buffer.hpp \
	net/buffer_info.hpp \
	net/channel.hpp \
	net/datalink.hpp \
	net/dummy_wnic.hpp \
	net/encoding.hpp \
	net/eui_48.hpp \
	net/eui_48_range.hpp \
	net/linux_wnic.hpp \
	net/offline_wnic.hpp \
	net/pcap_wnic.hpp \
	net/plain_datalink.hpp \
	net/prism2_datalink.hpp \
	net/radiotap_datalink.hpp \
	net/radiotap.hpp \
	net/txtime.hpp \
	net/wnic.hpp \
	net/wnic_encoding_fix.hpp \
	net/wnic_frame_aggregator.hpp \
	net/wnic_read_logger.hpp \
	net/wnic_require_timestamps.hpp \
	net/wnic_timestamp_fix.hpp \
	net/wnic_timestamp_swizzle.hpp \
	net/wnic_wallclock_fix.hpp \
	net/wnic_wrapper.hpp \
	net/wnic_write_logger.hpp \
	util/byteswab.hpp \
	util/dump.hpp \
	util/error_log.hpp \
	util/exceptions.hpp \
	util/syscall_error.hpp

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = banjax.pc
