# -*- Makefile -*-

libnlincludedir = $(includedir)/libnl@MAJ_VERSION@

nobase_libnlinclude_HEADERS = \
	netlink/fib_lookup/lookup.h \
	netlink/fib_lookup/request.h \
	netlink/genl/ctrl.h \
	netlink/genl/family.h \
	netlink/genl/genl.h \
	netlink/genl/mngt.h \
	netlink/netfilter/ct.h \
	netlink/netfilter/exp.h \
	netlink/netfilter/log.h \
	netlink/netfilter/log_msg.h \
	netlink/netfilter/netfilter.h \
	netlink/netfilter/nfnl.h \
	netlink/netfilter/queue.h \
	netlink/netfilter/queue_msg.h \
	netlink/addr.h \
	netlink/attr.h \
	netlink/cache.h \
	netlink/data.h \
	netlink/errno.h \
	netlink/handlers.h \
	netlink/hash.h \
	netlink/hashtable.h \
	netlink/list.h \
	netlink/msg.h \
	netlink/netlink-compat.h \
	netlink/netlink-kernel.h \
	netlink/netlink.h \
	netlink/object.h \
	netlink/route/action.h \
	netlink/route/act/mirred.h \
	netlink/route/act/skbedit.h \
	netlink/route/cls/ematch/cmp.h \
	netlink/route/cls/ematch/meta.h \
	netlink/route/cls/ematch/nbyte.h \
	netlink/route/cls/ematch/text.h \
	netlink/route/cls/basic.h \
	netlink/route/cls/cgroup.h \
	netlink/route/cls/ematch.h \
	netlink/route/cls/fw.h \
	netlink/route/cls/police.h \
	netlink/route/cls/u32.h \
	netlink/route/link/api.h \
	netlink/route/link/bonding.h \
	netlink/route/link/bridge.h \
	netlink/route/link/can.h \
	netlink/route/link/inet.h \
	netlink/route/link/inet6.h \
	netlink/route/link/info-api.h \
	netlink/route/link/macvlan.h \
	netlink/route/link/vlan.h \
	netlink/route/link/vxlan.h \
	netlink/route/link/veth.h \
	netlink/route/link/ip6tnl.h \
	netlink/route/link/ipgre.h \
	netlink/route/link/ipip.h \
	netlink/route/link/ipvti.h \
	netlink/route/link/sit.h \
	netlink/route/qdisc/cbq.h \
	netlink/route/qdisc/dsmark.h \
	netlink/route/qdisc/fifo.h \
	netlink/route/qdisc/htb.h \
	netlink/route/qdisc/netem.h \
	netlink/route/qdisc/prio.h \
	netlink/route/qdisc/red.h \
	netlink/route/qdisc/sfq.h \
	netlink/route/qdisc/tbf.h \
	netlink/route/qdisc/plug.h \
	netlink/route/qdisc/fq_codel.h \
	netlink/route/qdisc/hfsc.h \
	netlink/route/addr.h \
	netlink/route/class.h \
	netlink/route/classifier.h \
	netlink/route/link.h \
	netlink/route/neighbour.h \
	netlink/route/neightbl.h \
	netlink/route/nexthop.h \
	netlink/route/pktloc.h \
	netlink/route/qdisc.h \
	netlink/route/route.h \
	netlink/route/rtnl.h \
	netlink/route/rule.h \
	netlink/route/tc.h \
	netlink/socket.h \
	netlink/types.h \
	netlink/utils.h \
	netlink/version.h \
	netlink/cache-api.h \
	netlink/object-api.h \
	netlink/route/tc-api.h \
	netlink/idiag/idiagnl.h \
	netlink/idiag/meminfo.h \
	netlink/idiag/msg.h \
	netlink/idiag/req.h \
	netlink/idiag/vegasinfo.h \
	netlink/xfrm/ae.h \
	netlink/xfrm/lifetime.h \
	netlink/xfrm/sa.h \
	netlink/xfrm/selector.h \
	netlink/xfrm/sp.h \
	netlink/xfrm/template.h

if ENABLE_CLI
nobase_libnlinclude_HEADERS += \
	netlink/cli/addr.h \
	netlink/cli/class.h \
	netlink/cli/cls.h \
	netlink/cli/ct.h \
	netlink/cli/exp.h \
	netlink/cli/link.h \
	netlink/cli/neigh.h \
	netlink/cli/qdisc.h \
	netlink/cli/route.h \
	netlink/cli/rule.h \
	netlink/cli/tc.h \
	netlink/cli/utils.h
endif

noinst_HEADERS = \
	linux-private/linux/fib_rules.h \
	linux-private/linux/genetlink.h \
	linux-private/linux/gen_stats.h \
	linux-private/linux/if_addr.h \
	linux-private/linux/if_arp.h \
	linux-private/linux/if_ether.h \
	linux-private/linux/if.h \
	linux-private/linux/if_bridge.h \
	linux-private/linux/if_link.h \
	linux-private/linux/if_tunnel.h \
	linux-private/linux/if_vlan.h \
	linux-private/linux/inet_diag.h \
	linux-private/linux/ip.h \
	linux-private/linux/ip_mp_alg.h \
	linux-private/linux/ipv6.h \
	linux-private/linux/can/netlink.h \
	linux-private/linux/neighbour.h \
	linux-private/linux/netfilter.h \
	linux-private/linux/netfilter/nf_conntrack_common.h \
	linux-private/linux/netfilter/nfnetlink_compat.h \
	linux-private/linux/netfilter/nfnetlink_conntrack.h \
	linux-private/linux/netfilter/nfnetlink.h \
	linux-private/linux/netfilter/nfnetlink_log.h \
	linux-private/linux/netfilter/nfnetlink_queue.h \
	linux-private/linux/netlink.h \
	linux-private/linux/pkt_cls.h \
	linux-private/linux/sock_diag.h \
	linux-private/linux/tc_act/tc_mirred.h \
	linux-private/linux/tc_act/tc_skbedit.h \
	linux-private/linux/pkt_sched.h \
	linux-private/linux/rtnetlink.h \
	linux-private/linux/snmp.h \
	linux-private/linux/veth.h \
	linux-private/linux/xfrm.h \
	linux-private/linux/tc_ematch/tc_em_meta.h \
	netlink-private/genl.h \
	netlink-private/netlink.h \
	netlink-private/socket.h \
	netlink-private/tc.h \
	netlink-private/types.h \
	netlink-private/cache-api.h \
	netlink-private/object-api.h \
	netlink-private/route/link/api.h \
	netlink-private/route/tc-api.h
